samples/_failures_safe/1761530952_85de9f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6b6c16e7.c: In function ‘main’:
./samples/SAFE/__tmp_6b6c16e7.c:150:40: error: expected ‘)’ at end of input
  150 |                 } else if (status == -1
      |                           ~            ^
      |                                        )
./samples/SAFE/__tmp_6b6c16e7.c:150:17: error: expected declaration or statement at end of input
  150 |                 } else if (status == -1
      |                 ^
./samples/SAFE/__tmp_6b6c16e7.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6b6c16e7.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6b6c16e7.c:150:17: error: expected declaration or statement at end of input
